[gd_scene load_steps=57 format=2]

[ext_resource path="res://src/player/Player.tres" type="SpriteFrames" id=1]
[ext_resource path="res://src/player/CharAnim/Combo (Heavy).tres" type="Animation" id=2]
[ext_resource path="res://src/player/CharAnim/Backdash.tres" type="Animation" id=3]
[ext_resource path="res://src/player/CharAnim/playerStandUp.tres" type="Animation" id=4]
[ext_resource path="res://src/player/CharAnim/playerStandJab.tres" type="Animation" id=5]
[ext_resource path="res://src/player/CharAnim/playerStandHook.tres" type="Animation" id=6]
[ext_resource path="res://src/player/CharAnim/playerShoryuken.tres" type="Animation" id=7]
[ext_resource path="res://src/player/CharAnim/playerOverhead.tres" type="Animation" id=8]
[ext_resource path="res://src/player/CharAnim/playerDashHook.tres" type="Animation" id=9]
[ext_resource path="res://src/player/CharAnim/playerJumpJab.tres" type="Animation" id=10]
[ext_resource path="res://src/player/CharAnim/playerJumpDash.tres" type="Animation" id=11]
[ext_resource path="res://src/player/CharAnim/playerJumpHook1.tres" type="Animation" id=12]
[ext_resource path="res://src/player/CharAnim/Corkscrew.tres" type="Animation" id=13]
[ext_resource path="res://src/player/CharAnim/playerCrouchHook.tres" type="Animation" id=14]
[ext_resource path="res://src/player/CharAnim/playerCrouchDown.tres" type="Animation" id=15]
[ext_resource path="res://src/player/CharAnim/playerCrouchJab.tres" type="Animation" id=16]
[ext_resource path="res://src/player/CharAnim/playerDash.tres" type="Animation" id=17]
[ext_resource path="res://src/player/CharAnim/Combo (Light).tres" type="Animation" id=18]
[ext_resource path="res://assets/effects (MBAC PC)/ef24_000.png" type="Texture" id=57]
[ext_resource path="res://assets/effects (MBAC PC)/ef24_001.png" type="Texture" id=63]
[ext_resource path="res://src/player/player.gd" type="Script" id=71]
[ext_resource path="res://src/player/Hitbox.gd" type="Script" id=75]
[ext_resource path="res://assets/effects (MBAC PC)/ef24_003.png" type="Texture" id=76]
[ext_resource path="res://assets/effects (MBAC PC)/ef24_004.png" type="Texture" id=77]
[ext_resource path="res://assets/effects (MBAC PC)/ef24_006.png" type="Texture" id=78]
[ext_resource path="res://assets/effects (MBAC PC)/ef24_007.png" type="Texture" id=79]
[ext_resource path="res://assets/effects (MBAC PC)/ef24_008.png" type="Texture" id=80]
[ext_resource path="res://assets/effects (MBAC PC)/ef24_002.png" type="Texture" id=81]
[ext_resource path="res://assets/effects (MBAC PC)/ef24_005.png" type="Texture" id=82]
[ext_resource path="res://src/player/PlayerData.gd" type="Script" id=377]
[ext_resource path="res://assets/effects (MBAC PC)/ef24_009.png" type="Texture" id=378]
[ext_resource path="res://assets/SF3_3S_HitSparks_Sprite.7z/SF3_3S_HitSparks_40913 copy.png" type="Texture" id=379]
[ext_resource path="res://assets/SF3_3S_HitSparks_Sprite.7z/SF3_3S_HitSparks_40916 copy.png" type="Texture" id=380]
[ext_resource path="res://assets/SF3_3S_HitSparks_Sprite.7z/SF3_3S_HitSparks_40912 copy.png" type="Texture" id=381]
[ext_resource path="res://assets/SF3_3S_HitSparks_Sprite.7z/SF3_3S_HitSparks_40911 copy.png" type="Texture" id=382]
[ext_resource path="res://assets/SF3_3S_HitSparks_Sprite.7z/SF3_3S_HitSparks_40914 copy.png" type="Texture" id=383]
[ext_resource path="res://assets/SF3_3S_HitSparks_Sprite.7z/SF3_3S_HitSparks_40917 copy.png" type="Texture" id=384]
[ext_resource path="res://assets/SF3_3S_HitSparks_Sprite.7z/SF3_3S_HitSparks_40918 copy.png" type="Texture" id=385]
[ext_resource path="res://assets/SF3_3S_HitSparks_Sprite.7z/SF3_3S_HitSparks_40919 copy.png" type="Texture" id=386]
[ext_resource path="res://assets/SF3_3S_HitSparks_Sprite.7z/SF3_3S_HitSparks_40915 copy.png" type="Texture" id=387]
[ext_resource path="res://assets/SF3_3S_HitSparks_Sprite.7z/SF3_3S_HitSparks_40920 copy.png" type="Texture" id=388]
[ext_resource path="res://assets/effects (MBAC PC)/Nanaya effects/shi61_202.png" type="Texture" id=389]
[ext_resource path="res://assets/effects (MBAC PC)/Nanaya effects/shi61_209.png" type="Texture" id=390]
[ext_resource path="res://assets/effects (MBAC PC)/Nanaya effects/shi61_203.png" type="Texture" id=391]
[ext_resource path="res://assets/effects (MBAC PC)/Nanaya effects/shi61_204.png" type="Texture" id=392]
[ext_resource path="res://assets/effects (MBAC PC)/Nanaya effects/shi61_206.png" type="Texture" id=393]
[ext_resource path="res://assets/effects (MBAC PC)/Nanaya effects/shi61_208.png" type="Texture" id=394]
[ext_resource path="res://assets/effects (MBAC PC)/Nanaya effects/shi61_201.png" type="Texture" id=395]
[ext_resource path="res://assets/effects (MBAC PC)/Nanaya effects/shi61_200.png" type="Texture" id=396]
[ext_resource path="res://assets/effects (MBAC PC)/Nanaya effects/shi61_207.png" type="Texture" id=397]
[ext_resource path="res://assets/effects (MBAC PC)/Nanaya effects/shi61_205.png" type="Texture" id=398]
[ext_resource path="res://assets/effects (MBAC PC)/Nanaya effects/shi61_210.png" type="Texture" id=399]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 382 ), ExtResource( 381 ), ExtResource( 379 ), ExtResource( 383 ), ExtResource( 387 ), ExtResource( 380 ), ExtResource( 384 ), ExtResource( 385 ), ExtResource( 386 ), ExtResource( 388 ) ],
"loop": true,
"name": "default",
"speed": 20.0
}, {
"frames": [ ExtResource( 396 ), ExtResource( 395 ), ExtResource( 389 ), ExtResource( 391 ), ExtResource( 392 ), ExtResource( 398 ), ExtResource( 393 ), ExtResource( 397 ), ExtResource( 394 ), ExtResource( 390 ), ExtResource( 399 ) ],
"loop": true,
"name": "slash",
"speed": 25.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 124.667, 88.6472 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Default",
"speed": 5.0
}, {
"frames": [ ExtResource( 57 ), ExtResource( 63 ), ExtResource( 81 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 82 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 378 ) ],
"loop": false,
"name": "DashEffect",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 7.08997
height = 25.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 12
script = ExtResource( 71 )
speed = Vector2( 150, 350 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Backdash = ExtResource( 3 )
"anims/Combo (Heavy)" = ExtResource( 2 )
"anims/Combo (Light)" = ExtResource( 18 )
anims/Corkscrew = ExtResource( 13 )
anims/CrouchDown = ExtResource( 15 )
anims/CrouchHook = ExtResource( 14 )
anims/CrouchJab = ExtResource( 16 )
anims/Dash = ExtResource( 17 )
anims/DashHook = ExtResource( 9 )
anims/JumpDash = ExtResource( 11 )
anims/JumpHook = ExtResource( 12 )
anims/JumpJab = ExtResource( 10 )
anims/Overhead = ExtResource( 8 )
anims/Shoryuken = ExtResource( 7 )
anims/StandHook = ExtResource( 6 )
anims/StandJab = ExtResource( 5 )
anims/StandUp = ExtResource( 4 )

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2( 0, -20 )
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 8.0

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 0.131, 0.131 )
frames = ExtResource( 1 )
animation = "DashHook"
speed_scale = 2.0

[node name="Hitbox" type="Area2D" parent="Sprite"]
position = Vector2( -8.10574, 0.900642 )
collision_layer = 2
collision_mask = 12
script = ExtResource( 75 )

[node name="Hitspark" type="AnimatedSprite" parent="Sprite/Hitbox"]
visible = false
position = Vector2( -158.513, -121.587 )
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "slash"
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hitbox"]
position = Vector2( -138.388, -95.4487 )
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="Sprite"]
collision_mask = 6

[node name="Hurtbox" type="CollisionPolygon2D" parent="Sprite/Hurtbox"]
position = Vector2( -103.055, -23.4282 )
scale = Vector2( 7.02018, 5.81359 )
build_mode = 1
polygon = PoolVector2Array( 15.7907, 12.5291, 2.96703, 12.5291, 3.76661, -20.0755, 15.5805, -20.4761 )
disabled = true

[node name="Effects" type="AnimatedSprite" parent="Sprite"]
position = Vector2( -59.9952, 93.0344 )
scale = Vector2( -0.988818, 0.988818 )
frames = SubResource( 3 )
animation = "Default"
playing = true

[node name="CharacterData" type="Node" parent="."]
script = ExtResource( 377 )
max_HP = 100
uncancellable = true

[node name="PlatformDetector" type="RayCast2D" parent="."]
position = Vector2( -0.361423, -8.08499 )
enabled = true
cast_to = Vector2( 0, 8 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 4 )
[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_shape_entered" from="Sprite/Hitbox" to="." method="_on_Hitbox_body_shape_entered"]
[connection signal="animation_finished" from="Sprite/Hitbox/Hitspark" to="Sprite/Hitbox" method="_on_Hitspark_animation_finished"]
[connection signal="new_sprite_animation" from="CharacterData" to="." method="_on_CharacterData_new_sprite_animation"]
[connection signal="play_animation" from="CharacterData" to="." method="_on_CharacterData_play_animation"]
[connection signal="turn_sprite" from="CharacterData" to="." method="_on_CharacterData_turn_sprite"]
